--- a/archives/zhihu-search/2023-11-28.md
+++ b/archives/zhihu-search/2023-11-28.md
@@ -1,16 +1,24 @@
 # 2023-11-28
 
-共 18 条
+共 26 条
 
 <!-- BEGIN ZHIHUSEARCH -->
-<!-- 最后更新时间 Tue Nov 28 2023 11:00:46 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Tue Nov 28 2023 12:00:37 GMT+0800 (China Standard Time) -->
+1. [内行人眼中的全屋定制](https://www.zhihu.com/search?q=内行人眼中的全屋定制)
+1. [A股](https://www.zhihu.com/search?q=A股)
+1. [热水器推荐](https://www.zhihu.com/search?q=热水器推荐)
+1. [支原体肺炎](https://www.zhihu.com/search?q=支原体肺炎)
+1. [涉过愤怒的海](https://www.zhihu.com/search?q=涉过愤怒的海)
+1. [保研失败](https://www.zhihu.com/search?q=保研失败)
+1. [国考报名人数](https://www.zhihu.com/search?q=国考报名人数)
+1. [雅思词汇](https://www.zhihu.com/search?q=雅思词汇)
+1. [双非研究生有必要读么](https://www.zhihu.com/search?q=双非研究生有必要读么)
+1. [行测正确率要达到多少](https://www.zhihu.com/search?q=行测正确率要达到多少)
 1. [新一代国产 CPU 龙芯发布](https://www.zhihu.com/search?q=新一代国产 CPU 龙芯发布)
 1. [滴滴网约车等服务已恢复](https://www.zhihu.com/search?q=滴滴网约车等服务已恢复)
 1. [2023 攒学](https://www.zhihu.com/search?q=2023 攒学)
 1. [滴滴崩溃](https://www.zhihu.com/search?q=滴滴崩溃)
 1. [电视开机应默认全屏直播](https://www.zhihu.com/search?q=电视开机应默认全屏直播)
-1. [内行人眼中的全屋定制](https://www.zhihu.com/search?q=内行人眼中的全屋定制)
-1. [A股](https://www.zhihu.com/search?q=A股)
 1. [黑龙江大学食堂坐垫现多根细针](https://www.zhihu.com/search?q=黑龙江大学食堂坐垫现多根细针)
 1. [官方回应女子办事大厅发火](https://www.zhihu.com/search?q=官方回应女子办事大厅发火)
 1. [媒体：别用低级粉裹挟全红婵](https://www.zhihu.com/search?q=媒体：别用低级粉裹挟全红婵)
