--- a/archives/toutiao-search/2023-11-28.md
+++ b/archives/toutiao-search/2023-11-28.md
@@ -1,56 +1,76 @@
 # 2023-11-28
 
-共 211 条
+共 227 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Tue Nov 28 2023 16:00:56 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Tue Nov 28 2023 17:00:58 GMT+0800 (China Standard Time) -->
 1. [从也门发射的导弹溅落在美军舰附近](https://so.toutiao.com/search?keyword=从也门发射的导弹溅落在美军舰附近)
-1. [媒体：体育“饭圈化”当休矣](https://so.toutiao.com/search?keyword=媒体：体育“饭圈化”当休矣)
+1. [杨妞花被拐卖案二审择期宣判](https://so.toutiao.com/search?keyword=杨妞花被拐卖案二审择期宣判)
 1. [冬季呼吸道疾病多发人群如何防治](https://so.toutiao.com/search?keyword=冬季呼吸道疾病多发人群如何防治)
-1. [美媒关注：福建舰进行电磁弹射试验](https://so.toutiao.com/search?keyword=美媒关注：福建舰进行电磁弹射试验)
-1. [网红“小涛在非洲”在埃塞俄比亚遇害](https://so.toutiao.com/search?keyword=网红“小涛在非洲”在埃塞俄比亚遇害)
-1. [妈妈情路不顺崩溃大哭5岁女儿安慰](https://so.toutiao.com/search?keyword=妈妈情路不顺崩溃大哭5岁女儿安慰)
-1. [滴滴辟谣一夜有司机收入超690亿](https://so.toutiao.com/search?keyword=滴滴辟谣一夜有司机收入超690亿)
-1. [胡静林任国家税务总局党委书记](https://so.toutiao.com/search?keyword=胡静林任国家税务总局党委书记)
-1. [美国女院士帮孩子做手术？医院辟谣](https://so.toutiao.com/search?keyword=美国女院士帮孩子做手术？医院辟谣)
-1. [鹅腿阿姨老伴回应走红](https://so.toutiao.com/search?keyword=鹅腿阿姨老伴回应走红)
-1. [滴滴系统崩溃12小时损失有多大](https://so.toutiao.com/search?keyword=滴滴系统崩溃12小时损失有多大)
-1. [山西回应859万采购防止返贫监测系统](https://so.toutiao.com/search?keyword=山西回应859万采购防止返贫监测系统)
-1. [美国和朝鲜代表在安理会激烈交锋](https://so.toutiao.com/search?keyword=美国和朝鲜代表在安理会激烈交锋)
-1. [军大衣花棉袄在大学生中风靡](https://so.toutiao.com/search?keyword=军大衣花棉袄在大学生中风靡)
-1. [海底捞女员工面无表情跳“科目三”](https://so.toutiao.com/search?keyword=海底捞女员工面无表情跳“科目三”)
+1. [伊朗海军向美国航母打击群发出警告](https://so.toutiao.com/search?keyword=伊朗海军向美国航母打击群发出警告)
 1. [滴滴出行崩了引发大量用户吐槽](https://so.toutiao.com/search?keyword=滴滴出行崩了引发大量用户吐槽)
-1. [南京一头野猪横渡长江](https://so.toutiao.com/search?keyword=南京一头野猪横渡长江)
-1. [四川4人移动脚手架碰到高压线身亡](https://so.toutiao.com/search?keyword=四川4人移动脚手架碰到高压线身亡)
-1. [王思聪穿休闲服会见泰安市委领导](https://so.toutiao.com/search?keyword=王思聪穿休闲服会见泰安市委领导)
-1. [滴滴二度回应服务异常](https://so.toutiao.com/search?keyword=滴滴二度回应服务异常)
-1. [马斯克与以总理穿防弹衣访问遭袭地](https://so.toutiao.com/search?keyword=马斯克与以总理穿防弹衣访问遭袭地)
+1. [军大衣花棉袄在大学生中风靡](https://so.toutiao.com/search?keyword=军大衣花棉袄在大学生中风靡)
+1. [6名中国乞丐在泰被捕调查结果公布](https://so.toutiao.com/search?keyword=6名中国乞丐在泰被捕调查结果公布)
+1. [滴滴系统崩溃12小时损失有多大](https://so.toutiao.com/search?keyword=滴滴系统崩溃12小时损失有多大)
+1. [美国女院士帮孩子做手术？医院辟谣](https://so.toutiao.com/search?keyword=美国女院士帮孩子做手术？医院辟谣)
+1. [泰国将一名被捕中国乞讨者驱逐出境](https://so.toutiao.com/search?keyword=泰国将一名被捕中国乞讨者驱逐出境)
 1. [吴京口误说自己是闫妮老公](https://so.toutiao.com/search?keyword=吴京口误说自己是闫妮老公)
+1. [滴滴辟谣一夜有司机收入超690亿](https://so.toutiao.com/search?keyword=滴滴辟谣一夜有司机收入超690亿)
+1. [父亲顶着儿子在家里墙上画涂鸦](https://so.toutiao.com/search?keyword=父亲顶着儿子在家里墙上画涂鸦)
+1. [波司登回应高价羽绒服](https://so.toutiao.com/search?keyword=波司登回应高价羽绒服)
+1. [华为智界S7正式上市 售24.98万起](https://so.toutiao.com/search?keyword=华为智界S7正式上市+售24.98万起)
+1. [四川4人移动脚手架碰到高压线身亡](https://so.toutiao.com/search?keyword=四川4人移动脚手架碰到高压线身亡)
+1. [女子吐槽带娃去海底捞看到科目三不适](https://so.toutiao.com/search?keyword=女子吐槽带娃去海底捞看到科目三不适)
+1. [智界S7赛道+ADS 2.0首试](https://so.toutiao.com/search?keyword=智界S7赛道+ADS+2.0首试)
+1. [王思聪穿休闲服会见泰安市委领导](https://so.toutiao.com/search?keyword=王思聪穿休闲服会见泰安市委领导)
+1. [南京一头野猪横渡长江](https://so.toutiao.com/search?keyword=南京一头野猪横渡长江)
+1. [岛内舆论：蓝军拿下三成支持没问题](https://so.toutiao.com/search?keyword=岛内舆论：蓝军拿下三成支持没问题)
+1. [华为：新公司已向“四界”发出邀请](https://so.toutiao.com/search?keyword=华为：新公司已向“四界”发出邀请)
+1. [“清华北大”缘何争抢“鹅腿阿姨”](https://so.toutiao.com/search?keyword=“清华北大”缘何争抢“鹅腿阿姨”)
+1. [海底捞女员工面无表情跳“科目三”](https://so.toutiao.com/search?keyword=海底捞女员工面无表情跳“科目三”)
+1. [余承东一键召唤智界S7自动开上舞台](https://so.toutiao.com/search?keyword=余承东一键召唤智界S7自动开上舞台)
+1. [马斯克与以总理穿防弹衣访问遭袭地](https://so.toutiao.com/search?keyword=马斯克与以总理穿防弹衣访问遭袭地)
+1. [韩国外长用中文开场欢迎王毅](https://so.toutiao.com/search?keyword=韩国外长用中文开场欢迎王毅)
+1. [华为解决“烧钱”的车BU](https://so.toutiao.com/search?keyword=华为解决“烧钱”的车BU)
+1. [上官正义：司法鉴定底线不能破](https://so.toutiao.com/search?keyword=上官正义：司法鉴定底线不能破)
 1. [特斯拉回应“连撞11车事故”](https://so.toutiao.com/search?keyword=特斯拉回应“连撞11车事故”)
+1. [网红“小涛在非洲”在埃塞俄比亚遇害](https://so.toutiao.com/search?keyword=网红“小涛在非洲”在埃塞俄比亚遇害)
+1. [商场准备十米蛋糕 2分钟被“抢”光](https://so.toutiao.com/search?keyword=商场准备十米蛋糕+2分钟被“抢”光)
+1. [龙芯新CPU问世：不依赖国外技术](https://so.toutiao.com/search?keyword=龙芯新CPU问世：不依赖国外技术)
+1. [网红痞幼就盗用他人视频道歉](https://so.toutiao.com/search?keyword=网红痞幼就盗用他人视频道歉)
+1. [“麦乐村”是这样建成的](https://so.toutiao.com/search?keyword=“麦乐村”是这样建成的)
+1. [中国恒大被强执11亿](https://so.toutiao.com/search?keyword=中国恒大被强执11亿)
+1. [余承东：北汽江淮两个界产品开发中](https://so.toutiao.com/search?keyword=余承东：北汽江淮两个界产品开发中)
+1. [11岁男孩身高147cm家长称摆烂了](https://so.toutiao.com/search?keyword=11岁男孩身高147cm家长称摆烂了)
+1. [美国和朝鲜代表在安理会激烈交锋](https://so.toutiao.com/search?keyword=美国和朝鲜代表在安理会激烈交锋)
+1. [智界S7将推出泊车代驾Beta开放计划](https://so.toutiao.com/search?keyword=智界S7将推出泊车代驾Beta开放计划)
+1. [48岁教授说年轻人不加班是社会进步](https://so.toutiao.com/search?keyword=48岁教授说年轻人不加班是社会进步)
+1. [鹅腿阿姨出摊：200只鹅腿20分钟被抢光](https://so.toutiao.com/search?keyword=鹅腿阿姨出摊：200只鹅腿20分钟被抢光)
+1. [妈妈情路不顺崩溃大哭5岁女儿安慰](https://so.toutiao.com/search?keyword=妈妈情路不顺崩溃大哭5岁女儿安慰)
+1. [余华英落网前与一男子耍朋友近十年](https://so.toutiao.com/search?keyword=余华英落网前与一男子耍朋友近十年)
+1. [台民调：蔡职务表现不赞同率创新高](https://so.toutiao.com/search?keyword=台民调：蔡职务表现不赞同率创新高)
+1. [部分城市可实现“投靠朋友落户”](https://so.toutiao.com/search?keyword=部分城市可实现“投靠朋友落户”)
+1. [一念关山刘诗诗雪中舞梦回步步惊心](https://so.toutiao.com/search?keyword=一念关山刘诗诗雪中舞梦回步步惊心)
+1. [苹果公司重新依赖中国内地供应链](https://so.toutiao.com/search?keyword=苹果公司重新依赖中国内地供应链)
+1. [专家称未来房价上涨压力很大](https://so.toutiao.com/search?keyword=专家称未来房价上涨压力很大)
+1. [广电总局：电视开机应默认全屏直播](https://so.toutiao.com/search?keyword=广电总局：电视开机应默认全屏直播)
+1. [媒体：体育“饭圈化”当休矣](https://so.toutiao.com/search?keyword=媒体：体育“饭圈化”当休矣)
+1. [美媒关注：福建舰进行电磁弹射试验](https://so.toutiao.com/search?keyword=美媒关注：福建舰进行电磁弹射试验)
+1. [胡静林任国家税务总局党委书记](https://so.toutiao.com/search?keyword=胡静林任国家税务总局党委书记)
+1. [鹅腿阿姨老伴回应走红](https://so.toutiao.com/search?keyword=鹅腿阿姨老伴回应走红)
+1. [山西回应859万采购防止返贫监测系统](https://so.toutiao.com/search?keyword=山西回应859万采购防止返贫监测系统)
+1. [滴滴二度回应服务异常](https://so.toutiao.com/search?keyword=滴滴二度回应服务异常)
 1. [直击京西2.5万吨大桥空中转体](https://so.toutiao.com/search?keyword=直击京西2.5万吨大桥空中转体)
 1. [荷兰大选“变天”欧洲为何感到惊吓](https://so.toutiao.com/search?keyword=荷兰大选“变天”欧洲为何感到惊吓)
 1. [男子称因太胖被搓澡师傅嘲笑](https://so.toutiao.com/search?keyword=男子称因太胖被搓澡师傅嘲笑)
-1. [部分城市可实现“投靠朋友落户”](https://so.toutiao.com/search?keyword=部分城市可实现“投靠朋友落户”)
 1. [北京又一家住户房顶能吸扳手](https://so.toutiao.com/search?keyword=北京又一家住户房顶能吸扳手)
-1. [华为解决“烧钱”的车BU](https://so.toutiao.com/search?keyword=华为解决“烧钱”的车BU)
-1. [苹果公司重新依赖中国内地供应链](https://so.toutiao.com/search?keyword=苹果公司重新依赖中国内地供应链)
-1. [广电总局：电视开机应默认全屏直播](https://so.toutiao.com/search?keyword=广电总局：电视开机应默认全屏直播)
-1. [“清华北大”缘何争抢“鹅腿阿姨”](https://so.toutiao.com/search?keyword=“清华北大”缘何争抢“鹅腿阿姨”)
 1. [“科目三”舞蹈是什么](https://so.toutiao.com/search?keyword=“科目三”舞蹈是什么)
-1. [龙芯新CPU问世：不依赖国外技术](https://so.toutiao.com/search?keyword=龙芯新CPU问世：不依赖国外技术)
-1. [鹅腿阿姨出摊：200只鹅腿20分钟被抢光](https://so.toutiao.com/search?keyword=鹅腿阿姨出摊：200只鹅腿20分钟被抢光)
-1. [波司登回应高价羽绒服](https://so.toutiao.com/search?keyword=波司登回应高价羽绒服)
 1. [女儿给患癌母亲拍遗照父亲一旁打光](https://so.toutiao.com/search?keyword=女儿给患癌母亲拍遗照父亲一旁打光)
 1. [中日韩外长会释放哪些重要信号](https://so.toutiao.com/search?keyword=中日韩外长会释放哪些重要信号)
-1. [11岁男孩身高147cm家长称摆烂了](https://so.toutiao.com/search?keyword=11岁男孩身高147cm家长称摆烂了)
 1. [以色列释放33名巴勒斯坦被关押人员](https://so.toutiao.com/search?keyword=以色列释放33名巴勒斯坦被关押人员)
 1. [00后男孩开货车5年收入超百万](https://so.toutiao.com/search?keyword=00后男孩开货车5年收入超百万)
 1. [部分羽绒服标价2000元折后129元](https://so.toutiao.com/search?keyword=部分羽绒服标价2000元折后129元)
-1. [女子吐槽带娃去海底捞看到科目三不适](https://so.toutiao.com/search?keyword=女子吐槽带娃去海底捞看到科目三不适)
 1. [曝纪晓波将吴佩慈名下13亿房产抵押](https://so.toutiao.com/search?keyword=曝纪晓波将吴佩慈名下13亿房产抵押)
-1. [专家称未来房价上涨压力很大](https://so.toutiao.com/search?keyword=专家称未来房价上涨压力很大)
-1. [48岁教授说年轻人不加班是社会进步](https://so.toutiao.com/search?keyword=48岁教授说年轻人不加班是社会进步)
-1. [商场准备十米蛋糕 2分钟被“抢”光](https://so.toutiao.com/search?keyword=商场准备十米蛋糕+2分钟被“抢”光)
 1. [感染高峰下的儿科一夜](https://so.toutiao.com/search?keyword=感染高峰下的儿科一夜)
 1. [奶奶带5岁孙子每天晨跑3公里](https://so.toutiao.com/search?keyword=奶奶带5岁孙子每天晨跑3公里)
 1. [合肥科大硅谷高新孵化园二期将开工](https://so.toutiao.com/search?keyword=合肥科大硅谷高新孵化园二期将开工)
@@ -75,7 +95,6 @@
 1. [王毅用法国名言谈中欧交流](https://so.toutiao.com/search?keyword=王毅用法国名言谈中欧交流)
 1. [朝鲜侦察卫星拍到美军基地照片](https://so.toutiao.com/search?keyword=朝鲜侦察卫星拍到美军基地照片)
 1. [特斯拉将进行Cybertruck交付活动](https://so.toutiao.com/search?keyword=特斯拉将进行Cybertruck交付活动)
-1. [杨妞花被拐卖案二审择期宣判](https://so.toutiao.com/search?keyword=杨妞花被拐卖案二审择期宣判)
 1. [余华英丈夫落网 曾联手拐卖儿童](https://so.toutiao.com/search?keyword=余华英丈夫落网+曾联手拐卖儿童)
 1. [人贩余华英夫妇拐卖儿童细节](https://so.toutiao.com/search?keyword=人贩余华英夫妇拐卖儿童细节)
 1. [菊展结束千盆菊花被扔进垃圾车](https://so.toutiao.com/search?keyword=菊展结束千盆菊花被扔进垃圾车)
@@ -87,7 +106,6 @@
 1. [戴尔辟谣供应链撤离中国传闻](https://so.toutiao.com/search?keyword=戴尔辟谣供应链撤离中国传闻)
 1. [调查称58.7%青年拒绝躺平](https://so.toutiao.com/search?keyword=调查称58.7%青年拒绝躺平)
 1. [新西兰新任总理称将取消禁烟举措](https://so.toutiao.com/search?keyword=新西兰新任总理称将取消禁烟举措)
-1. [中国恒大被强执11亿](https://so.toutiao.com/search?keyword=中国恒大被强执11亿)
 1. [人口第一县为何2年关停95所幼儿园](https://so.toutiao.com/search?keyword=人口第一县为何2年关停95所幼儿园)
 1. [刚建的三层楼被拆 主人失声痛哭](https://so.toutiao.com/search?keyword=刚建的三层楼被拆+主人失声痛哭)
 1. [谢楠回应吴京口误](https://so.toutiao.com/search?keyword=谢楠回应吴京口误)
@@ -103,12 +121,10 @@
 1. [长安汽车将在泰国建立生产基地](https://so.toutiao.com/search?keyword=长安汽车将在泰国建立生产基地)
 1. [16岁女生没考上985遭父亲家暴](https://so.toutiao.com/search?keyword=16岁女生没考上985遭父亲家暴)
 1. [丁宁谈“上一秒队友下一秒对手”](https://so.toutiao.com/search?keyword=丁宁谈“上一秒队友下一秒对手”)
-1. [网红痞幼就盗用他人视频道歉](https://so.toutiao.com/search?keyword=网红痞幼就盗用他人视频道歉)
 1. [广东江海区委书记投案接受审查调查](https://so.toutiao.com/search?keyword=广东江海区委书记投案接受审查调查)
 1. [买25元肉绞成馅变32元拒付款被吐槽](https://so.toutiao.com/search?keyword=买25元肉绞成馅变32元拒付款被吐槽)
 1. [直击杨妞花被拐卖案二审开庭](https://so.toutiao.com/search?keyword=直击杨妞花被拐卖案二审开庭)
 1. [普仁医院从事代孕？武汉卫健委通报](https://so.toutiao.com/search?keyword=普仁医院从事代孕？武汉卫健委通报)
-1. [伊朗海军向美国航母打击群发出警告](https://so.toutiao.com/search?keyword=伊朗海军向美国航母打击群发出警告)
 1. [男子药店买钙片被强制推销保健品](https://so.toutiao.com/search?keyword=男子药店买钙片被强制推销保健品)
 1. [八年级女生一人拿下9张奖状](https://so.toutiao.com/search?keyword=八年级女生一人拿下9张奖状)
 1. [单位里退休的风向变了吗](https://so.toutiao.com/search?keyword=单位里退休的风向变了吗)
